@@ -21,6 +21,11 @@ Before 1.0 big stuff
 Before 1.0 little stuff
 -----------------------
 
+ o make oprofiled.log line-buffered in non-verbose case ...
+ o fix this:
+	oprofpp: WARNING: the last modified time of the binary file /lib/modules/2.5.65//kernel/drivers/usb/host/uhci-hcd.ko does not match
+	that of the sample file. Either this is the wrong binary or the binary
+	has been modified since the sample file was created.
  o improve the *non* verbose daemon log to be a bit more informative
  o daemon: opd_put_kernel_samples vs. setup_kernel_sample vs. handle_. Rename, way too confusing
  o --buffer-size is useless on 2.5 without tuning of watershed
